de nuevo ensayo completo

--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ small {
   height: 6em;
   width: 6em;
   padding: 1rem;
-  background-image: url("../assets/images/3_Mano_circulo.png");
+  background-image: url("../assets/images/3_Mano_circulo.svg");
   background-size: cover;
   opacity: 0.9;
   margin-right: 2em;
