--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -364,7 +364,7 @@ small
         width: 6em;
         
         padding: 1rem;
-        background-image: url("../assets/images/3_Mano_circulo.png");
+        background-image: url("../assets/images/3_Mano_circulo.svg");
         background-size: cover;
         opacity: .9;
         margin-right: 2em;
