--- a/css/style.css
+++ b/css/style.css
@@ -1305,15 +1305,15 @@ small {
 }
 .cintillo {
   position: fixed;
-  top: 2px;
+  top: 10px;
   left: 0px;
   width: 100%;
-  height: 200px;
+  height: 100%;
   background-color: #000;
   display: flex;
   justify-content: flex-start;
   align-items: left;
-  padding: 0 20px;
+  padding: 0 10px;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
