--- a/scss/components/iframe.scss
+++ b/scss/components/iframe.scss
@@ -1,23 +1,30 @@
 @use '../components/variables' as v;
 @use 'sass:color';
 
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 180px;
+  overflow: hidden;
+  background-color:#fff;
+}
 
 .cintillo {
   position: fixed;
-  top: 10px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 170px;
   background-color:#000;
   display: flex;
   justify-content: flex-start;
   align-items: left;
-  padding: 0 10px;
+  padding: 10px 10px;
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-
+  
   &__texto {
-    margin: 50px 0 0 20px;
+    margin: 40px 0 0 20px;
     font-size: 1.5em;
     text-transform: uppercase;
     font-family: 'titulos', sans-serif;
@@ -27,13 +34,13 @@
 
   &__logo {
     margin: 0;
-      padding: 5px;
+      padding: 0;
       display: block;
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       background-size: contain;
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: center center;
       background-image: url("../assets/images/3_Mano_circulo.svg");
   }
 
@@ -48,11 +55,7 @@
 
   @media (max-width: 728px)
     {
-        height: 150px;
       .cintillo__texto {font-size: 1em;}
-      .cintillo__logo { 
-        width: 150px;
-        height: 150px;}
     }
   @media (max-width: 445px)
     {
@@ -62,10 +65,12 @@
     @media (max-width: 383px)
     {
       height: 130px;
+
       .cintillo__texto {margin: 30px 0 0 10px;}
       .cintillo__logo { 
         width: 130px;
-        height: 130px;}
+        height: 130px;
+        background-position: left 20%;}
     }
 
 }
