--- a/css/style.css
+++ b/css/style.css
@@ -1073,7 +1073,7 @@ small {
 .ruta__pieza {
   background-color: #000;
   height: 200px;
-  padding: 2px;
+  padding: 5px;
   margin-bottom: 2em;
   display: grid;
   grid-template-columns: 0.5fr 1fr;
@@ -1086,15 +1086,15 @@ small {
 }
 .ruta__pieza-header-img {
   width: 100%;
-  height: 99%;
+  height: 100%;
   background-color: #CEFAAB;
-  background-size: contain;
+  background-size: 90%;
   background-position: center center;
   background-repeat: no-repeat;
 }
 .ruta__pieza-descrip {
   position: relative;
-  top: 5px;
+  top: 10px;
   left: 15px;
   line-height: 1;
   width: 95%;
@@ -1200,15 +1200,15 @@ small {
 }
 
 .pieza1 {
-  background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100-jpg.webp");
+  background-image: url("../assets/images/pieza1.jpg");
 }
 
 .pieza2 {
-  background-image: url("https://mutante.org/wp-content/uploads/2025/05/Poster-jpg.webp");
+  background-image: url("../assets/images/pieza2.jpg");
 }
 
 .pieza3 {
-  background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100_11zon.jpg");
+  background-image: url("../assets/images/pieza3.jpg");
 }
 
 .bntierras {
