--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -976,13 +976,12 @@ small
     width: 50%;
     margin-top: 5em;
     margin-left: 0;
-    //margin-right: auto;
 
     &__pieza 
     {
       background-color: #000;
       height:200px;
-      padding: 2px;
+      padding: 5px;
       margin-bottom: 2em;
 
       display: grid;
@@ -999,9 +998,9 @@ small
         &-img {
           @extend .card__header-img;
           width: 100%;
-          height: 99%; 
+          height: 100%; 
           background-color: v.$verde; 
-          background-size: contain;         
+          background-size: 90%;         
           background-position: center center;
           background-repeat: no-repeat;   
         }
@@ -1010,7 +1009,7 @@ small
       &-descrip
       {
         position: relative;
-        top: 5px;
+        top: 10px;
         left: 15px;
         line-height: 1;
         width: 95%;
@@ -1120,11 +1119,11 @@ background-image: url("../assets/images/separador_menta_cintillo.png");}
 
 //Ruta de conversacion
 .pieza1
-{background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100-jpg.webp");}
+{background-image: url("../assets/images/pieza1.jpg");}
 .pieza2
-{background-image: url("https://mutante.org/wp-content/uploads/2025/05/Poster-jpg.webp");}
+{background-image: url("../assets/images/pieza2.jpg");}
 .pieza3
-{background-image: url("https://mutante.org/wp-content/uploads/2025/05/01-100_11zon.jpg");}
+{background-image: url("../assets/images/pieza3.jpg");}
 
 //banners cards
 .bntierras
