--- a/scss/components/paneles.scss
+++ b/scss/components/paneles.scss
@@ -1100,7 +1100,7 @@ small
     }
 }
 
-//separadores
+//separadores: solo compila
 .fondo_menta
 {background-image: url("../assets/images/5_Arboles_texturas.svg");}
 .fondo_mandarina
@@ -1123,7 +1123,9 @@ background-image: url("../assets/images/separador_menta_cintillo.png");}
 .pieza2
 {background-image: url("../assets/images/pieza2.jpg");}
 .pieza3
-{background-image: url("../assets/images/pieza3.jpg");}
+{background-image: url("../assets/images/pieza3.webp");}
+.pieza4
+{background-image: url("https://mutante.org/wp-content/uploads/2025/06/01-2-jpg.webp");}
 
 //banners cards
 .bntierras
